# rust-monorepo-cd

./: Cargo.toml
.github/workflows/: release.yml
test-monorepo-cd1/: Cargo.toml
test-monorepo-cd2/: Cargo.toml
