[package]
description = "just testing crates publishing"
edition = "2021"
license = "MIT"
name = "test-monorepo-cd"
version = "0.1.0"

[workspace]
members = [
  "test-monorepo-cd1",
  "test-monorepo-cd2",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
