[package]
edition = "2021"
name = "test-monorepo-cd1"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-monorepo-cd = {version = "^0.1.0", path = "../"}
test-monorepo-cd2 = {version = "^0.1.0", path = "../test-monorepo-cd2"}
