[package]
description = "workspace member"
edition = "2021"
license = "MIT"
name = "test-monorepo-cd1"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-monorepo-cd = {version = "^0.2.0", path = "../"}
test-monorepo-cd2 = {version = "^0.2.0", path = "../test-monorepo-cd2"}
